[package]
name = "fdb-hammer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Benchmark and stress test tool for FDB"

[[bin]]
name = "fdb-hammer"
path = "src/main.rs"

[features]
default = ["vendored"]
vendored = ["fdb/vendored", "eccodes/vendored"]
system = ["fdb/system", "eccodes/system"]

[dependencies]
md-5 = "0.10"
clap = { version = "4", features = ["derive"] }
fdb = { path = "../../crates/fdb", default-features = false }
eccodes = { git = "ssh://git@github.com/ecmwf/rust-wrappers-playground.git", default-features = false }
hostname = "0.4"
rand = "0.9"
nix = { version = "0.29", features = ["fs", "signal", "user"] }
crossbeam-channel = "0.5"
libc = "0.2"
